linux runs  first and win next

--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -17,9 +17,7 @@ jobs:
     needs: ["linux-server"]
     steps:
       - name: powershell
-        run: |
-          Get-Service
-          Get-EventLog
+        run: Get-EventLog  
         shell: bash
 
 
