--- a/.github/workflows/simple2.yml
+++ b/.github/workflows/simple2.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: using-checkout
-        uses: actions/checkout
+        uses: Navaneeth-Kalkeri/Actions1
       - name: some-script
         run: |
          echo 
