--- a/.github/workflows/simple2.yml
+++ b/.github/workflows/simple2.yml
@@ -9,6 +9,6 @@ jobs:
         run: |
          echo 
            yum install java -y 
-           java --version
-
+           java --version 
+        shell: bash
 
