--- a/.github/workflows/simple2.yml
+++ b/.github/workflows/simple2.yml
@@ -8,7 +8,7 @@ jobs:
       - name: some-script
         run: |
          echo 
-           yum install java -y 
+           sudo apt-get install java -y 
            java --version 
         shell: bash
 
