--- a/.github/workflows/simple2.yml
+++ b/.github/workflows/simple2.yml
@@ -9,7 +9,8 @@ jobs:
         run: |
         
           sudo apt-get install jq
-          pwd 
-          ls -a
+          echo
+           pwd 
+           ls -a
 
 
