--- a/.github/workflows/simple2.yml
+++ b/.github/workflows/simple2.yml
@@ -9,8 +9,10 @@ jobs:
         run: |
         
           sudo apt-get install jq
-          echo
-           pwd 
-           ls -a
+        
+          echo: pwd
+          
+          
+           
 
 
