--- a/.github/workflows/simple2.yml
+++ b/.github/workflows/simple2.yml
@@ -8,9 +8,11 @@ jobs:
       - name: some-script
         run: |
         
-          pwd
+          echo
           ls -a 
-        shell: bash
+          echo
+          who am i
+       
         
           
 
