--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,24 +1,27 @@
 
-# name: CI
-# on: [push]
-# jobs:
-#   linux-server:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Run a one-line script
-#         run: echo Hello, world!
-#       - name: Run a multi-line script
-#         run: |
-#           echo Add other actions to build,
-#           echo test, and deploy your project.
+name: CI
+on: [push]
+jobs:
+  linux-server:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run a one-line script
+        run: echo Hello, world!
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo 
+          git --verion
+          ls -a 
+          
 
-#   windows-Server: 
-#     runs-on: ubuntu-latest
-#     needs: ["linux-server"]
-#     steps:
-#       - name: powershell
-#         run: Get-ScriptAnalyzerRule
-#         shell: pwsh
+  windows-Server: 
+    runs-on: ubuntu-latest
+    needs: ["linux-server"]
+    steps:
+      - name: powershell
+        run: Get-ScriptAnalyzerRule
+        shell: pwsh
 
 
       
