--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -15,7 +15,9 @@ jobs:
           echo
           whoami
           echo
-          free -m 
+          free -m
+          echo
+          uname -r 
 
 
   windows-Server: 
